Logo is now more responsive

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="header">
         <div class="logo">
-            Header logo
+            Header logo  
         </div>    
         <ul class="links">
             <li><a href="temp1.html">Header Link One</a></li>
             <li><a href="temp2.html">Header Link Two</a></li>
             <li><a href="temp3.html">Header Link Three</a></li>
-        </ul>
+        </ul>   
     </div>    
     <div class="hero">
         <div class="heromain">
@@ -34,6 +34,29 @@
             <img src="hero1.jpg">
             <!-- Image by <a href="https://pixabay.com/users/achim0164-7548115/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3075379">Achim Haupt</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3075379">Pixabay</a> -->
         </div>
+    </div>
+
+    <!-- this is the section with informations, 4 boxes and subtext. To do with flex propertities most likely-->
+    <div class="info">
+
+    </div>
+
+    <!-- this is the quote section -->
+
+    <div class="quote">
+
+    </div>
+
+    <!-- call to action blue section -->
+
+    <div class="action">
+
+    </div>
+
+    <!-- footer with copyright info -->
+
+    <div class="footer">
+
     </div>
 </body>
 </html>
