--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="herotext2">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
-            <!-- place for button-->
+            <button type="button" class="button1">Sign up</button>>
         </div>
         <div class="heroimg">
             <img src="hero1.jpg">
@@ -38,13 +38,21 @@
 
     <!-- this is the section with informations, 4 boxes and subtext. To do with flex propertities most likely-->
     <div class="info">
-
+        <div class="infotext">Some random information.</div>
+        <div class="content">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box4"></div>
+        
+        </div>
     </div>
 
     <!-- this is the quote section -->
 
     <div class="quote">
-
+        <div class="quotext">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All i know is that it looks NICE</div>
+        <div class="thor"> -Thor, God of Thunder</div>
     </div>
 
     <!-- call to action blue section -->
