Info section added p, need to fix it though

--- a/index.html
+++ b/index.html
@@ -28,23 +28,38 @@
                 <div class="herotext2">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
-            <button type="button" class="button1">Sign up</button>>
-        </div>
-        <div class="heroimg">
+                <button type="button" class="button1">Sign up</button>>
+            </div>
+            <div class="heroimg">
             <img src="hero1.jpg">
             <!-- Image by <a href="https://pixabay.com/users/achim0164-7548115/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3075379">Achim Haupt</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3075379">Pixabay</a> -->
+            </div>
         </div>
     </div>
-
     <!-- this is the section with informations, 4 boxes and subtext. To do with flex propertities most likely-->
     <div class="info">
-        <div class="infotext">Some random information.</div>
-        <div class="content">
-            <div class="box1"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
-            <div class="box4"></div>
         
+        <div class="infotext">
+            Some random information.
+        </div>
+        
+        <div class="content">
+            <div class="box">
+                <img src="box1.jpg" class="imgbox">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>    
+            <div class="box">
+                <img src="box2.jpg" class="imgbox">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="box">
+                <img src="box3.jpg" class="imgbox">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>      
+            <div class="box">
+                <img src="box4.jpg" class="imgbox">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>  
         </div>
     </div>
 
