--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="herotext2">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
-                <button type="button" class="button1">Sign up</button>>
+                <button type="button" class="button1">Sign up</button>
             </div>
             <div class="heroimg">
             <img src="hero1.jpg">
@@ -66,20 +66,25 @@
     <!-- this is the quote section -->
 
     <div class="quote">
-        <div class="quotext">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All i know is that it looks NICE</div>
+        <div class="quotext">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All i know is that it looks NICE.</div>
         <div class="thor"> -Thor, God of Thunder</div>
     </div>
 
     <!-- call to action blue section -->
 
-    <div class="action">
-
-    </div>
+        <div class="bluebox">
+            <div class="leftcta">
+                <div class="cta">Call to action! It's time!</div>
+                <div class="belowcta">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="rightcta"></div>
+            <button type="button" class="button2">Sign up</button>
+        </div>
 
     <!-- footer with copyright info -->
 
     <div class="footer">
-
+        Copyright 	&copy; The Odin Project 2021
     </div>
 </body>
 </html>
